# GhostLink

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: task.md
.github/scripts/: check_local.sh
.github/workflows/: ci.yml
src/: config.rs  main.rs  net.rs
src/messaging/: crypto.rs  handshake.rs  message_manager.rs  mod.rs
src/web/: mod.rs  shared_state.rs  web_server.rs
static/: index.html  script.js  style.css
tests/: integration_tets.rs
