[package]
name = "GhostLink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
stun = "0.9" 
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.7" 
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] } 
bincode = "1.3"
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio_kcp = "0.9"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hkdf = "0.12"